--- a/section_appendix/appendix.tex
+++ b/section_appendix/appendix.tex
@@ -1,5 +1,5 @@
 \chapter*{Appendix}
-\subsection{Notations}
+\section*{Notations}
 \begin{itemize}
 \item $x \in \mathbb{R}^n$ is a vector.
 \item $A \in \mathbb{R}^{m \times n}$  is a  maxtrix.
@@ -54,7 +54,8 @@ $
 \omega_3 & 0 & -\omega_1 \\
  -\omega_2 & \omega_1 & 0
  \end{bmatrix}
-$
+$.
 
 \end{itemize}
 
+%\include{appendix_linear_algebra}
